version/0.31/_sources/api/solver/_autosummary/settings/sample_trajectories.rst.txt
:orphan:

.. _sample_trajectories:

sample_trajectories
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.sample_trajectories
    :show-inheritance:

.. rubric:: Attributes

============================================   ==============================================

Attribute                                                                             Summary

============================================   ==============================================
:ref:`output_udf <output_udf>`                                   The DPM sampling output UDF.

:ref:`sort_sample_files <sort_sample_files>`       Enable writing of sorted DPM sample files.

============================================   ==============================================

.. rubric:: Methods

==========================================   ===============================

Method                                                               Summary

==========================================   ===============================
:ref:`compute <compute_9>`                                'compute' command.

:ref:`start_file_write <start_file_write>`       'start_file_write' command.

:ref:`stop_file_write <stop_file_write>`          'stop_file_write' command.

==========================================   ===============================

.. rubric:: Included in:

==========================================   ===========================

Parent                                                           Summary

==========================================   ===========================
:ref:`discrete_phase_6 <discrete_phase_6>`       'discrete_phase' child.

==========================================   ===========================

